@@ -8,6 +8,7 @@ changes in version 1.3.6 (2010-08-07)
 - `gt splitfasta` has new option -width
 - `gt sequniq` has new option -width
 - `gt fingerprint` has new options -width, -o, -gzip, -bzip2 and -force
+- `gt mutate` has new options -width, -o, -gzip, -bzip2 and -force
 
 
 changes in version 1.3.5 (2010-07-12)
